# linebot-demo

./: function_app.py  pyproject.toml  requirements.txt
.github/workflows/: main_linebot-housedreamer.yml  main_linebot-housedreamer2.yml
core/: __init__.py
core/linebot/handlers/: __init__.py  message_event_handler.py
core/linebot/services/: __init__.py  abstract_message.py  flex_message.py  image_message.py  location_message.py  sticker_message.py  template_message.py  text_message.py
core/linebot/utils/: __init__.py  common.py
core/routes/: function_app_t1.py
core/services/linebot/: abstract_message.py
core/utils/: common.py
static/templates/text_messages/: test_text_message.json
